[package]
authors     = ["Harrison Totty <harrisongtotty@gmail.com>"]
description = "A tiny web server written in Rust."
edition     = "2018"
name        = "tws"
publish     = false
readme      = "README.md"
version     = "0.1.0"

[dependencies.chrono]
version = "0.4"

[dependencies.clap]
version = "2.33.0"

[dependencies.fern]
version = "0.5.7"

[dependencies.log]
version = "0.4.6"

[dependencies.rocket]
version = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.2"

[dependencies.yaml-rust]
version = "0.4.3"